SERVER-100100 Ensure memory leaks doesn't occur when onDestroy throws (#31840)

GitOrigin-RevId: 8e83f55f2a91c5696a44bd7bf4c3f4f814426678